[package]
name = "robopow"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http1", "http2", "tokio", "json", "macros", "query"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
redis = { version = "0.24", features = ["tokio-rustls", "tokio", "aio"] }
sha2 = { version = "0.10", features = ["asm", "asm-aarch64"] }
serde = { version = "1", features = ["derive"] }
deadpool-redis = "0.14"
serde_json = "1"
thiserror = "1"
rand = "0.8"
vss = "0.1"
